# urdf_models

./: README.md
adding_pose_generator/: CMakeLists.txt  package.xml
adding_pose_generator/include/adding_pose_generator/: InitialPosePlugin.h  MotionExecutionScript.hpp  PoseOptimizer.h
adding_pose_generator/src/: InitialPosePlugin.cpp  PoseOptimizer.cpp  adding_pose_generator_node.cpp  motion_execution_script_node.cpp  planning_scene_ros_api_tutorial.cpp
gazebo_pose_optimizer_world_plugin/: CMakeLists.txt  package.xml
gazebo_pose_optimizer_world_plugin/include/gazebo_pose_optimizer_world_plugin/: GazeboPluginLoader.h
gazebo_pose_optimizer_world_plugin/src/: GazeboPluginLoader.cpp  object_info_request.cpp
gazebo_pose_optimizer_world_plugin/worlds/: plugin_test.world
urdf_models/: CMakeLists.txt  package.xml  physics_test.blend
urdf_models/launch/: 002_master_chef_can_google_512k.launch  007_tuna_fish_can_google_512k.launch  025_mug_google_512k.launch  1_hollowed.launch  1_poly.launch  1_poly.launch~  1_poly_2.launch  2_poly.launch  2_poly.launch~  3_poly.launch  4_poly.launch  5_poly.launch  block_1.launch  block_2.launch  cylinder_1.launch  polygons.launch  polys.launch  polys.launch~  spawn_object.launch  spawn_test1.launch  stacking_stones.launch  stone.launch  stones.launch  table.launch  test2.world  test_world.launch
urdf_models/meshes/: 2_stone.dae  2_stone.stl  old_stone_2.stl  stonemodel_2_500.3ds  stonemodel_3_500.3ds  stonemodel_4_500.3ds
urdf_models/models/002_master_chef_can_google_512k/: write_urdf.py
urdf_models/models/002_master_chef_can_google_512k/urdf/: 002_master_chef_can_google_512k.urdf
urdf_models/models/007_tuna_fish_can_google_512k/: write_urdf.py
urdf_models/models/007_tuna_fish_can_google_512k/urdf/: 007_tuna_fish_can_google_512k.urdf
urdf_models/models/025_mug_google_512k/: write_urdf.py
urdf_models/models/025_mug_google_512k/urdf/: 025_mug_google_512k.urdf
urdf_models/models/1_poly/: 1_poly.stl  1_poly.xacro
urdf_models/models/1_poly/mesh/: 1_poly.stl
urdf_models/models/1_poly/urdf/: 1_poly.xacro
urdf_models/models/2_poly/: 2_poly.xacro
urdf_models/models/2_poly/mesh/: 2_poly.stl
urdf_models/models/2_poly/urdf/: 2_poly.xacro
urdf_models/models/3_poly/: 3_poly.xacro
urdf_models/models/3_poly/mesh/: 3_poly.stl  3_poly_2.stl
urdf_models/models/3_poly/urdf/: 3_poly.xacro
urdf_models/models/4_poly/: 4_poly.xacro
urdf_models/models/4_poly/mesh/: 4_poly_2.stl  4_poly_3.stl
urdf_models/models/4_poly/urdf/: 4_poly.xacro
urdf_models/models/5_poly/: 5_poly.xacro
urdf_models/models/5_poly/mesh/: 5_poly.dae  5_poly.stl  5_poly_2.stl
urdf_models/models/5_poly/urdf/: 5_poly.xacro
urdf_models/models/block_1/urdf/: block_1.urdf
urdf_models/models/block_2/urdf/: block_2.urdf
urdf_models/models/cylinder_1/urdf/: cylinder_1.urdf
urdf_models/models/polygons/: 1_hollowed.stl  1_hollowed.xacro  1_poly.xacro  1_poly2.xacro  1_poly_config_2.dae  1_poly_config_2.stl  1_poly_config_2.xacro  2_poly.xacro  2_poly_config_2.dae  2_poly_config_2.stl  3_poly.xacro  4_poly.stl  4_poly.xacro  5_poly.stl  5_poly.xacro
urdf_models/models/reduced_mesh_models/: test1.dae  test1.xacro
urdf_models/models/stone/: 1_poly.xacro  1_poly.xacro~  3D_models_1.dae  3D_models_2.dae  3D_models_3.dae  3D_models_4.dae  3D_models_5.dae  3_poly.xacro  3_poly.xacro~  stone.xacro
urdf_models/models/stone/urdf/: stone.xacro
urdf_models/models/stone_1/mesh/: stone_1.dae  stone_1.stl  stonemodel_1_500.3ds
urdf_models/models/stone_1/urdf/: stone_1.xacro
urdf_models/models/stone_2/mesh/: stone5_300.stl  stone5_high.stl  stone_2.dae  stone_2.stl  stone_2_1.stl
urdf_models/models/stone_2/urdf/: stone_2.xacro
urdf_models/models/stone_3/mesh/: stone_3.stl
urdf_models/models/stone_3/urdf/: stone_3.xacro
urdf_models/models/stone_4/mesh/: stone_4.stl
urdf_models/models/stone_4/urdf/: stone_4.xacro
urdf_models/models/stone_5/mesh/: stone_5.stl
urdf_models/models/stone_5/urdf/: stone_5.xacro
urdf_models/models/stone_6/mesh/: stone_6.stl
urdf_models/models/stone_6/urdf/: stone_6.xacro
urdf_models/models/stone_formation_recon/urdf/: stone_formation_recon.xacro
urdf_models/models/stone_high_resolution/urdf/: stone_high_resolution.xacro
urdf_models/models/stone_highres/urdf/: stone.xacro
urdf_models/models/table/urdf/: table.urdf
urdf_models/models/template/urdf/: template.xacro
urdf_models/urdf/: 2_stone.xacro  old_stone_2.xacro
urdf_models/worlds/: test.world  test3.world  test4.world
