<?xml version="1.0"?>
<package>
  <name>gazebo_pose_optimizer_world_plugin</name>
  <version>0.0.0</version>
  <description>
      Offers a *system* plugin which can be
      used to load other *gazebo_pose_optimizer_world_plugin after the world has been
      loaded, so it doesn't have to be specified in the Gazebo "world" file.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_world_plugin_loader</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>object_msgs_tools</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <run_depend>gazebo_world_plugin_loader</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>object_msgs_tools</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_ros</build_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
